# Smart-Prompt-Eval

./: .env.example  .flake8  .gitignore  Does Seed Matter.ipynb  Linguistic Errors.ipynb  Multilingual Prompting.ipynb  Power of Roles.ipynb  README.md  TODO.md  archive.md  evaluate.py  output.txt  paper.md  pyproject.toml  red-teaming copy.ipynb  red-teaming.ipynb  requirements.txt  response_cache.json  setup.cfg  utils.py
Does Seed Matter/: Does Seed Matter.ipynb  Does_Seed_Matter.py  output.txt
Linguistic Errors/: Linguistic Errors.ipynb  Linguistic_Errors.py  output.txt
Multilingual Prompting/: Multilingual Prompting.ipynb  Multilingual_Prompting.py  output.txt
Power of Roles/: Power_of_Roles.py  logs_bias.txt  logs_bias_blocked.txt  output.txt  utils.py
assets/: Harm_Prompt_Demo.drawio  Lang_Error_Demo.drawio
datasets/: gsm8k_test_de.jsonl  gsm8k_test_es.jsonl  gsm8k_test_fr.jsonl
evals/: direct_gsm8k_eval.py  linguistic_errors_eval.py  multilingual_prompting_eval.py  power_of_roles_eval.py  seed_consistency_eval.py
hack_prompting.egg-info/: PKG-INFO  SOURCES.txt
response_cache/: 11e3ce56b4a490bb748bcad2edcd28bc_attempt1.json  11e3ce56b4a490bb748bcad2edcd28bc_attempt2.json  178f1029f79c6c59d892b7775c3a908a_attempt1.json  178f1029f79c6c59d892b7775c3a908a_attempt2.json  23f324f9e3da9d9d3fe1cc7f2677fab3_attempt1.json  23f324f9e3da9d9d3fe1cc7f2677fab3_attempt2.json  24774ed8cb17a1d88f93fd93db2b8bc2_attempt1.json  24774ed8cb17a1d88f93fd93db2b8bc2_attempt2.json  2b32ddb72be3ddacc63e491ea5467a52_attempt2.json  2dc7d79ef77196f4587ee83b8d1f7013_attempt1.json  2dc7d79ef77196f4587ee83b8d1f7013_attempt2.json  31b281aaea2f794ae9f3f1192d1cdea8_attempt1.json  31b281aaea2f794ae9f3f1192d1cdea8_attempt2.json  33d10241a5713f3c7cb8890ecf0f95b8_attempt1.json  33d10241a5713f3c7cb8890ecf0f95b8_attempt2.json  43ee6ddcb6aa48152b5bc0407ad4060c_attempt1.json  43ee6ddcb6aa48152b5bc0407ad4060c_attempt2.json  4fc7ec15413cc4889983b29b66bd323b_attempt1.json  4fc7ec15413cc4889983b29b66bd323b_attempt2.json  51ed897f87bce863ca8913757d205718_attempt1.json  51ed897f87bce863ca8913757d205718_attempt2.json  52c9925a8be61f3907e3a9a6af493cee_attempt1.json  52c9925a8be61f3907e3a9a6af493cee_attempt2.json  55aad04b656b0c3f942266a2ee6587c7_attempt1.json  55aad04b656b0c3f942266a2ee6587c7_attempt2.json  66995eab8c3cbce0ffbe057e9ee1ccc0_attempt1.json  66995eab8c3cbce0ffbe057e9ee1ccc0_attempt2.json  676e18bf3f7f83fc6cf9242c6e883d7d_attempt1.json  676e18bf3f7f83fc6cf9242c6e883d7d_attempt2.json  69c2da7dfe5c1ebf620b9a0b7a7e1a94_attempt1.json  69c2da7dfe5c1ebf620b9a0b7a7e1a94_attempt2.json  6db82c160a864d8aae3631ad8f848299_attempt1.json  6db82c160a864d8aae3631ad8f848299_attempt2.json  717329468d9f874eed38bcde2d487407_attempt2.json  75779f70c0ed3c42cf2e77f39697a374_attempt1.json  75779f70c0ed3c42cf2e77f39697a374_attempt2.json  76198e448175a5ce2fd8acdf65fb97de_attempt1.json  76198e448175a5ce2fd8acdf65fb97de_attempt2.json  7f120eddef7b881aa27b4dd8c331e868_attempt1.json  7f120eddef7b881aa27b4dd8c331e868_attempt2.json  (+33 more)
results/openai_gpt_oss_20b/: gsm8k_responses.json  linguistic_errors_responses.json  multilingual_prompting_results.json
scripts/: translate_gsm8k.py
smart_prompt_eval/: __init__.py  run_eval.py  run_evals.py  translate_gsm8k.py
smart_prompt_eval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
smart_prompt_eval/datasets/: __init__.py  gsm8k_test_de.jsonl  gsm8k_test_es.jsonl  gsm8k_test_fr.jsonl  (+2 more)
tests/: __init__.py  test_basic.py  test_evals.py  test_get_response.py  test_utils.py
utils/: common_utils.py  eval_utils.py  response_cacher.py  run_evaluations.py  translate-gsm8k.py  utils.py
z_experiments/: Does_Seed_Matter.py  Linguistic_Errors.py  Multilingual_Prompting.py  Power_of_Roles.py
(+41 files in other folders)
